add new endpoint to swagger
